// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reader renders 1`] = `
<div
  className="ui grid"
>
  <div
    className="eleven wide column"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<strong>foobar</strong>",
        }
      }
    />
    <div
      className="ui comments"
    >
      <div
        className="ui dividing header"
      >
        Comentarios
      </div>
    </div>
  </div>
  <div
    className="five wide column"
  >
    <div
      className="ui items"
    />
  </div>
</div>
`;

exports[`Reader renders loader when fetching 1`] = `
<div
  className="ui grid"
>
  <div
    className="eleven wide column"
  >
    <div
      className="ui active centered inline loader"
    />
  </div>
  <div
    className="five wide column"
  >
    <div
      className="ui items"
    />
  </div>
</div>
`;

exports[`Reader renders message error 1`] = `
<div
  className="ui icon negative message"
>
  <i
    aria-hidden="true"
    className="frown icon"
  />
  <div
    className="content"
  >
    <div
      className="header"
    >
      Houston, tenemos un problema!
    </div>
    <p>
      Ha ocurrido un error. Intenta recargar la página.
    </p>
  </div>
</div>
`;

exports[`Reader renders nothing if no control 1`] = `null`;
